Monitoring/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: bankapp-gateway                     # <-- your Envoy Gateway "Gateway" resource name
      namespace: newbankapp  # <-- namespace where that Gateway lives                
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /monitoring
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
